intento de centrado de las cartas

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+.container {
+  display: grid;
+  justify-items: center;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
