--- a/src/exercises/GRID_Ryañez/card.css
+++ b/src/exercises/GRID_Ryañez/card.css
@@ -7,6 +7,11 @@ body {
   background-color: lightgray;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
 .card {
   margin: 10px;
   max-width: 400px;
@@ -49,7 +54,6 @@ body {
 
 @media (min-width: 694px) {
   .container {
-    max-width: 400px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 10px;
